<resources>
    <string name="app_name">YellowPages2</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">Welcome!</string>
    <string name="e_mail">E-mail</string>
    <string name="login">Login</string>
    <string name="e_mail2">E-mail</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="forgot_password2">Forgot Password</string>
    <string name="login2">Login</string>
    <string name="signup2">SignUp</string>
    <string name="welcome2">Welcome</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up2">Sign Up!</string>
    <string name="title_activity_choice">Choice</string>
    <string name="carpenter">CARPENTER</string>
    <string name="choose_the_required_service">Choose the required service</string>
    <string name="electrician">ELECTRICIAN</string>
    <string name="painters">PAINTER</string>
    <string name="photographer">PHOTOGRAPHER</string>
    <string name="plumber">Plumber</string>
    <string name="u_name">Username</string>
    <string name="yes">YES</string>
    <string name="no">No</string>
    <string name="Calendar">Choose a date for the required service</string>
    <string name="Time">Choose a time slot for the required service</string>
    <string name="_1_2_pm">1 - 2 PM</string>
    <string name="_10_11_am">10 - 11 AM</string>
    <string name="_11_12_pm">11 - 12 PM</string>
    <string name="_12_1_pm">12 - 1 PM</string>
    <string name="_2_3_pm">2 - 3 PM</string>
    <string name="_3_4_pm">3 - 4 PM</string>
    <string name="_4_5_pm">4 - 5 PM</string>
    <string name="_5_6_pm">5 - 6 PM</string>
    <string name="_6_7_pm">6 - 7 PM</string>
    <string name="welcome3">WELCOME!</string>
    <string name="home">TAKE ME HOME!</string>
    <string name="your_account_has_been_deleted_and_all_your_booking_sstand_deleted_go_home_and_create_a_new_account">Your Account has been deleted and all your bookings stand canceled, go home and create a new account.</string>
    <string name="next">Next</string>
    <string name="username">Username</string>
    <string name="cancel">CANCEL</string>
    <string name="feedback">Feedback</string>
    <string name="send">Send</string>
</resources>
