<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ap"
    tools:context="com.sdl.dart.yellowpages2.TimeSlot2"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <Button
        android:id="@+id/b10_11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/_10_11_am"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/b11_12"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/b11_12" />

    <Button
        android:id="@+id/b11_12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_11_12_pm"
        android:layout_marginStart="37dp"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="129dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/b10_11" />

    <Button
        android:id="@+id/b12_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_12_1_pm"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/b11_12"
        app:layout_constraintRight_toRightOf="@+id/b3_4"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/b3_4"
        app:layout_constraintTop_toTopOf="@+id/b11_12" />

    <Button
        android:id="@+id/b1_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/_1_2_pm"

        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/b10_11"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/b2_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_2_3_pm"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/b11_12"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/b3_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/_3_4_pm"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/b12_1" />

    <Button
        android:id="@+id/b4_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/_4_5_pm"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="14dp"
        app:layout_constraintTop_toBottomOf="@+id/b1_2"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/b5_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_5_6_pm"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/b2_3"
        android:layout_marginTop="14dp"
        app:layout_constraintTop_toBottomOf="@+id/b2_3"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/b2_3" />

    <Button
        android:id="@+id/b6_7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_6_7_pm"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/b3_4"
        android:layout_marginTop="14dp"
        app:layout_constraintTop_toBottomOf="@+id/b3_4"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/b3_4" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/Time"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/b11_12"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>
